...
                android:foreground="@mipmap/ic_launcher_foreground"
                android:foregroundGravity="center"
                android:foregroundTint="#88000000"
                android:src="@drawable/shape_empty_book" />

            <TextView
                android:id="@+id/book_view_book_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="Title: "
                android:textIsSelectable="true"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/book_view_book_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:onClick="onAuthorNameClicked"
                android:text="Author: "
                android:textIsSelectable="true"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/book_view_book_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="Genre: "
                android:textIsSelectable="true"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/book_view_book_isbn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="ISBN: "
                android:textIsSelectable="true"
                android:textSize="16dp"
...
                    android:textColor="@color/text_link_blue" />

            </LinearLayout>


            <ToggleButton
                android:id="@+id/book_view_fav_book_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:background="@drawable/selector_toggle_favorite"
                android:backgroundTint="@color/worm_skin"
...
