...
        android:layout_height="wrap_content"
        android:text="@string/fatalError"
        android:visibility="gone"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/books_horizontal_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>
