<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingHorizontal="4dp"
    android:paddingVertical="2dp"
    android:layout_margin="2dp"
    android:background="@drawable/shape_pill"
    android:backgroundTint="?colorSecondary"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/fav_genre_pill_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Genre_name"
        android:contextClickable="true"
        android:textColor="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginHorizontal="5dp"
        />

    <ImageButton
        android:id="@+id/fav_genre_pill_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_remove"
        android:background="@android:color/transparent"
        app:tint="@color/white"
        android:visibility="gone"
        />
</LinearLayout>