...
        android:layout_marginVertical="5dp"
        android:elevation="5dp"
        android:visibility="gone"
        >

        <Spinner
            android:id="@+id/userfavgenre_genre_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:spinnerMode="dialog"/>

        <ImageButton
            android:id="@+id/userfavgenre_add_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/icon_add"
            app:tint="?colorSecondary"
            android:layout_marginEnd="5dp"/>
...
